--- a/app/src/main/res/layout/itme_product_row.xml
+++ b/app/src/main/res/layout/itme_product_row.xml
@@ -42,15 +42,26 @@
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
-
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tvPrice"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="\u20b9 2500"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tvPriceDiscount"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
+                android:text="\u20b9 2500"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+</LinearLayout>
         </LinearLayout>
             <android.support.v7.widget.AppCompatImageView
                 android:padding="5dp"
