--- a/app/src/main/res/layout/itme_product_row.xml
+++ b/app/src/main/res/layout/itme_product_row.xml
@@ -58,10 +58,18 @@
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
-                android:text="\u20b9 2500"
+                android:text=""
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 </LinearLayout>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_discount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="\u20b9 2500"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
         </LinearLayout>
             <android.support.v7.widget.AppCompatImageView
                 android:padding="5dp"
