--- a/app/src/main/res/layout/activity_payment_options.xml
+++ b/app/src/main/res/layout/activity_payment_options.xml
@@ -17,6 +17,12 @@
             android:layout_margin="5dp"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:id="@+id/ll_payment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Paytm Wallet" />
-
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
