--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -21,7 +21,7 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="4dp"
-            android:src="@drawable/dummy_user"
+            android:src="@mipmap/ic_launcher_round"
             app:civ_border_width="2dp"
             app:civ_border_color="@color/darkPink"/>
 
